# tauri-plugin-universal-updater

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: Example.kt  ExamplePlugin.kt  UniversalUpdaterPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  config.rs  desktop.rs  error.rs  lib.rs  mobile.rs
