[package]
name = "tauri-plugin-universal-updater"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-universal-updater"

[dependencies]
tauri = { version = "2.0.0-beta.18" }
serde = "1.0"
thiserror = "1.0"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.14", features = ["build"] }
