[package]
name = "tauri-plugin-universal-updater"
version = "0.0.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-universal-updater"

[dependencies]
tauri = { version = "2.0.0-beta.18" }
serde = "1.0"
thiserror = "1.0"
semver = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde_json = "1"
minisign-verify = "0.2"
url = "2"
http = "1"
base64 = "0.22"
time = { version = "0.3", features = ["parsing", "formatting"] }
futures-util = "0.3"
tempfile = "3"
infer = "0.15"

[target."cfg(target_os = \"windows\")".dependencies]
zip = { version = "2", default-features = false, optional = true }
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[target."cfg(target_os = \"linux\")".dependencies]
dirs-next = "2"
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
tar = "0.4"
flate2 = "1"

[build-dependencies]
tauri-plugin = { version = "2.0.0-beta.14", features = ["build"] }
